for pull request index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h2>Hello rola</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt corporis dolorum illo odio. Odio veniam expedita nostrum recusandae obcaecati! Illo labore ullam perspiciatis ducimus culpa quia itaque sapiente quis delectus.</p>
    <h3>hello from this branch </h3>
+   <h1>edit 2 from the pull request</h1>
     <script src="./app.js"></script>
 </body>
 </html>
